--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,5 +5,7 @@ sphinx:
   configuration: docs/conf.py
 
 # Define the Python version and install dependencies
-python:
-  version: 3.11
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.11"
