--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,7 +5,7 @@ sphinx:
   configuration: docs/conf.py
 
 # Define the Python version and install dependencies
-build:
-  os: ubuntu-22.04
-  tools:
-    python: "3.11"
+python:
+  version: 3.7
+  install:
+    - requirements: requirements.txt
