--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,18 +4,19 @@ build-backend = "setuptools.build_meta"
 requires = ["setuptools", "wheel", "numpy"]
 
 [project]
+name = "tomtag" # as it would appear on PyPI
+readme = "README.md" 
+version = "0.10"
+requires-python = ">=3.8"
 authors = [
   {name = "Thomas Jaeken", email = "tj2022@hw.ac.uk"},
 ] 
+description = "Package to identify correlated single photon detection events." 
 classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
 ] 
-description = "Package to identify correlated single photon detection events." 
-name = "tomtag" # as it would appear on PyPI
-readme = "README.md" 
-version = "0.10" 
 
 [project.urls]
 "Bug Tracker" = "https://github.com/Thomas-Jaeken/tomtag/issues"
