--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,29 @@
-# pyproject.toml
 [build-system]
+requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
-requires = ["setuptools", "wheel", "numpy"]
 
 [project]
-name = "tomtag" # as it would appear on PyPI
-readme = "README.md" 
-version = "0.10"
+name = "tomtag"
+version = "0.11"
+dependencies = [
+  "numpy",
+]
 requires-python = ">=3.8"
 authors = [
   {name = "Thomas Jaeken", email = "tj2022@hw.ac.uk"},
-] 
-description = "Package to identify correlated single photon detection events." 
+]
+description = "Package to identify correlated single photon detection events."
+readme = "README.md"
+license = {file = "LICENSE"}
+keywords = ["timetag"]
 classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
-] 
+]
 
 [project.urls]
+Homepage = "https://github.com/Thomas-Jaeken/tomtag"
+Documentation = "https://tomtag.readthedocs.io"
+Repository = "hhttps://github.com/Thomas-Jaeken/tomtag.git"
 "Bug Tracker" = "https://github.com/Thomas-Jaeken/tomtag/issues"
-"Homepage" = "https://github.com/Thomas-Jaeken/tomtag"
-
-[pypi]
