--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -2,6 +2,9 @@ name: Build
 
 on: [push, pull_request]
 
+env:
+  CIBW_SKIP: pp*
+
 jobs:
   build_wheels:
     name: Build wheels on ${{ matrix.os }}
