--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -11,8 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # os: [ubuntu-22.04, windows-2022, macos-12, macos-14]
-        os: [windows-2022]
+        os: [ubuntu-22.04, windows-2019, macos-12, macos-14]
 
     steps:
       - uses: actions/checkout@v4
