--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,6 +1,10 @@
 name: Build
 
-on: [push, pull_request]
+# on: [push, pull_request]
+on:
+  push:
+    tags:
+      - 'v*'
 
 env:
   CIBW_SKIP: pp*
@@ -11,7 +15,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-22.04, windows-2019, macos-12, macos-14]
+        # os: [ubuntu-22.04, windows-2019, macos-12, macos-14]
+        os: [windows-2019, macos-14]
 
     steps:
       - uses: actions/checkout@v4
@@ -19,7 +24,12 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.18.0
 
-      - uses: actions/upload-artifact@v4
+      # - uses: actions/upload-artifact@v4
+      #   with:
+      #     name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
+      #     path: ./wheelhouse/*.whl
+
+      - name: Release wheels
+        uses: softprops/action-gh-release@v1
         with:
-          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
-          path: ./wheelhouse/*.whl
+          files: ./wheelhouse*.whl
