--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -33,7 +33,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-2019, macos-12, macos-14]
+        # os: [ubuntu-latest, windows-2019, macos-12, macos-14]
+        os: [macos-14]
 
     steps:
       - uses: actions/checkout@v4
