--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -3,11 +3,8 @@ name: Build and upload to release page and PyPI
 # on: [push, pull_request]
 on:
   push:
-    branches:
-      - packaging
-  release:
-    types:
-      - published
+    tags:
+      - 'v*'
 
 env:
   CIBW_SKIP: pp*
@@ -59,7 +56,6 @@ jobs:
     environment: pypi
     permissions:
       id-token: write
-    if: github.event_name == 'release' && github.event.action == 'published'
     steps:
       - uses: actions/download-artifact@v4
         with:
