--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "numpy"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "tomtag"
+name = "tomtag-test-package"
 version = "0.11"
 dependencies = [
   "numpy",
